--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ sqlparse==0.5.3
 tzdata==2025.2
 virtualenv==20.30.0
 psycopg2-binary==2.9.9  # Utilisez la version la plus récente compatible
+dj-database-url==2.1.0
