--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
-# render.yaml - Configuration Render complète et optimisée
 version: "1"
 
+# Configuration de la base de données PostgreSQL
 databases:
   - name: gestion_employer
     databaseName: employer_zfnr
@@ -8,12 +8,11 @@ databases:
     plan: free
     region: oregon
     postgresMajorVersion: "16"
-
-    # ⚠️ Pour plus de sécurité, remplace 0.0.0.0/0 par ton IP uniquement
     ipAllowList:
-      - source: 0.0.0.0/0
-        description: everywhere
+      - source: 0.0.0.0/0  # Sécuriser en remplaçant par une IP spécifique
+        description: "Accès depuis toutes les IPs"
 
+# Configuration du service web
 services:
   - type: web
     name: mon-app-django
@@ -21,12 +20,13 @@ services:
     plan: free
     region: oregon
 
+    # Commandes de déploiement
     buildCommand: pip install -r requirements.txt
-
     startCommand: |
-      python manage.py migrate &&
-      gunicorn gestion_employe.wsgi:application
+      python manage.py migrate &&  # Appliquer les migrations automatiquement
+      gunicorn gestion_employe.wsgi:application  # Démarrer l'application avec Gunicorn
 
+    # Variables d'environnement pour la base de données et le super utilisateur
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -34,12 +34,10 @@ services:
           property: connectionString
 
       - key: DJANGO_SUPERUSER_USERNAME
-        value: admin
-
+        value: ${DJANGO_SUPERUSER_USERNAME:-admin}  # Valeur par défaut si non définie
       - key: DJANGO_SUPERUSER_PASSWORD
-        value: admin123
-
+        value: ${DJANGO_SUPERUSER_PASSWORD:-admin123}  # Valeur par défaut si non définie
       - key: DJANGO_SUPERUSER_EMAIL
-        value: admin@example.com
+        value: ${DJANGO_SUPERUSER_EMAIL:-admin@example.com}  # Valeur par défaut si non définie
 
     autoDeploy: true
